--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable name="rank" type="String" />
         <variable name="name" type="String" />
         <variable name="symbol" type="String" />
         <variable name="price" type="String" />
@@ -12,79 +13,110 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view"
+        style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/coin_list_item_height"
         android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:elevation="3dp"
-        app:cardCornerRadius="10dp"
-        app:contentPadding="8dp">
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0dp"
+        app:contentPaddingLeft="@dimen/coins_list_item_padding"
+        app:contentPaddingRight="@dimen/coins_list_item_padding">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minEms="2"
+                android:text="@{rank}"
+                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+                tools:text="1234" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_coin"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/logo"/>
+                tools:src="@drawable/logo" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:ellipsize="end"
-                android:gravity="center|start"
-                android:maxLines="1"
-                android:scrollHorizontally="true"
-                android:text="@{name}"
-                android:textAppearance="?attr/textAppearanceBodyLarge"
-                app:layout_constraintStart_toEndOf="@+id/img_coin"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Name" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_symbol"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2dp"
-                android:text="@{symbol}"
-                android:textAppearance="?attr/textAppearanceBodySmall"
-                app:layout_constraintStart_toEndOf="@+id/img_coin"
-                app:layout_constraintTop_toBottomOf="@+id/tv_name"
-                tools:text="SMBL" />
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingStart="12dp"
+                android:paddingEnd="6dp"
+                app:layout_constraintStart_toEndOf="@+id/img_coin">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center|start"
+                    android:maxEms="10"
+                    android:maxLines="1"
+                    android:minEms="4"
+                    android:scrollHorizontally="false"
+                    android:text="@{name}"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                    tools:text="Name" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_symbol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxEms="10"
+                    android:minEms="4"
+                    android:text="@{symbol}"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                    tools:text="SMBL" />
+
+            </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_price"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
                 android:gravity="end"
+                android:maxEms="8"
+                android:minEms="2"
                 android:text="@{price}"
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_change"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="100.00$" />
+                tools:text="123,456.78$" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_change"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="end"
+                android:minEms="4"
                 android:text="@{change}"
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="13.14%" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                tools:text="123.45%" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom|end"
+            android:background="?android:attr/listDivider" />
     </com.google.android.material.card.MaterialCardView>
 
 </layout>
