--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/menu_bookmarks"
-        android:icon="@drawable/bookmark"
+        android:icon="@drawable/bookmark_outlined"
         android:title="@string/menu_bookmarks" />
 
     <item
