--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -100,6 +100,11 @@
     <color name="md_theme_dark_surfaceDim">#111416</color>
     <color name="md_theme_dark_surfaceBright">#37393C</color>
 
+    <color name="status_bar_light">#D6E3EB</color>
+    <color name="navigation_bar_light">#E1E9F0</color>
+    <color name="status_bar_dark">#202B33</color>
+    <color name="navigation_bar_dark">#1A2329</color>
+
     <color name="bookmark_light">#FDD835</color>
     <color name="bookmark_dark">#CDCD00</color>
     <color name="bookmark_light_ripple">#42FDD835</color>
