--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -106,9 +106,9 @@
     <color name="navigation_bar_dark">#1A2329</color>
 
     <color name="bookmark_light">#FDD835</color>
-    <color name="bookmark_dark">#CDCD00</color>
+    <color name="bookmark_dark">#FFF176</color>
     <color name="bookmark_light_ripple">#42FDD835</color>
-    <color name="bookmark_dark_ripple">#42CDCD00</color>
+    <color name="bookmark_dark_ripple">#42FFF176</color>
     <color name="background_light_ripple">#42191C1E</color>
     <color name="background_dark_ripple">#42E2E2E5</color>
 
