--- a/app/src/main/res/layout/coin_item.xml
+++ b/app/src/main/res/layout/coin_item.xml
@@ -90,7 +90,7 @@
                 android:gravity="end"
                 android:maxEms="8"
                 android:minEms="2"
-                android:text="@{price}"
+                android:text='@{price + "$"}'
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_change"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:minEms="4"
-                android:text="@{change}"
+                android:text='@{change + "%"}'
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
