--- a/app/src/main/res/layout/shimmer_coin_details.xml
+++ b/app/src/main/res/layout/shimmer_coin_details.xml
@@ -223,7 +223,8 @@
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:layout_marginTop="@dimen/default_padding_small" />
+                        android:layout_marginTop="@dimen/default_padding_small"
+                        android:layout_marginBottom="@dimen/default_padding_small" />
 
                 </LinearLayout>
 
@@ -251,7 +252,8 @@
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:layout_marginTop="@dimen/default_padding_small" />
+                        android:layout_marginTop="@dimen/default_padding_small"
+                        android:layout_marginBottom="@dimen/default_padding_small" />
 
                 </LinearLayout>
 
@@ -286,7 +288,8 @@
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:layout_marginTop="@dimen/default_padding_small" />
+                        android:layout_marginTop="@dimen/default_padding_small"
+                        android:layout_marginBottom="@dimen/default_padding_small" />
 
                 </LinearLayout>
 
@@ -332,7 +335,8 @@
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:layout_marginTop="@dimen/default_padding_small" />
+                        android:layout_marginTop="@dimen/default_padding_small"
+                        android:layout_marginBottom="@dimen/default_padding_small" />
 
                 </LinearLayout>
 
@@ -360,7 +364,8 @@
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:layout_marginTop="@dimen/default_padding_small" />
+                        android:layout_marginTop="@dimen/default_padding_small"
+                        android:layout_marginBottom="@dimen/default_padding_small" />
 
                 </LinearLayout>
 
